fixed spacing in action buttons

--- a/css/style.css
+++ b/css/style.css
@@ -2776,7 +2776,7 @@ ul {
         font-family: 'Poppins', sans-serif;
         font-size: 9.2px;
         font-weight: 600;
-        gap: 6px;
+        gap: 10px;
         justify-content: center;
         line-height: 1.08;
         height: 100%;
@@ -2847,7 +2847,7 @@ ul {
 
         .mobile-header-action {
             font-size: 8px;
-            gap: 5px;
+            gap: 8px;
         }
 
         .mobile-action-img {
